--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "file-loader": "^6.2.0",
     "react": "^18.2.0",
+    "react-animated-heart": "^0.0.7",
     "react-cloudinary-upload-widget": "^1.6.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.4",
